# justqt3dthings

./: CMakeLists.txt  CamerasExample.qml  Felgologo3d.qml  Rabbit.qml  Slider3Axis.qml  animations3d.qml  base3dview.cpp  base3dview.h  basic3d.cpp  basic3d.h  basic3d.qml  basic3dfromfile.cpp  basic3dfromfile.h  basic3dshapes.cpp  basic3dshapes.h  main.cpp  mainwindow.cpp  mainwindow.h  meshmanipulation3d.qml  mousecursorcontroller.cpp  mousecursorcontroller.h  movement3d.qml  textures3d.qml
meshes/: cube.mesh  rabbit.mesh
